syntax = "proto3";

service UsersApi {
  rpc GetUser (UserRequest) returns (UserResponse) {}
}

message UserRequest {
  string email = 1;
}

message UserResponse {
  string name = 1;
  string email = 3;
}
